src/patternfly/components/DualListSelector/dual-list-selector.scss
/* ... */
.pf-c-dual-list-selector__pane {
  display: contents;

  &.pf-m-chosen {
    --pf-c-dual-list-selector__header--GridArea: var(--pf-c-dual-list-selector--m-chosen__header--GridArea);
    --pf-c-dual-list-selector__tools--GridArea: var(--pf-c-dual-list-selector--m-chosen__tools--GridArea);
    --pf-c-dual-list-selector__status--GridArea: var(--pf-c-dual-list-selector--m-chosen__status--GridArea);
    --pf-c-dual-list-selector__menu--GridArea: var(--pf-c-dual-list-selector--m-chosen__menu--GridArea);
  }
}

.pf-c-dual-list-selector__header {
  grid-area: var(--pf-c-dual-list-selector__header--GridArea);
  margin-bottom: var(--pf-c-dual-list-selector__header--MarginBottom);
}

.pf-c-dual-list-selector__title-text {
  font-weight: var(--pf-c-dual-list-selector__title-text--FontWeight);
}

.pf-c-dual-list-selector__tools {
  display: flex;
  grid-area: var(--pf-c-dual-list-selector__tools--GridArea);
  margin-bottom: var(--pf-c-dual-list-selector__tools--MarginBottom);
}

.pf-c-dual-list-selector__tools-filter {
  flex-grow: 1;
}

.pf-c-dual-list-selector__tools-actions {
  display: flex;

  .pf-c-dual-list-selector__tools-filter ~ & {
    margin-left: var(--pf-c-dual-list-selector__tools-filter--tools-actions--MarginLeft);
  }
}

.pf-c-dual-list-selector__status {
  display: flex;
  grid-area: var(--pf-c-dual-list-selector__status--GridArea);
  margin-bottom: var(--pf-c-dual-list-selector__status--MarginBottom);
}

.pf-c-dual-list-selector__status-text {
  flex-grow: 1;
  font-size: var(--pf-c-dual-list-selector__status-text--FontSize);
  color: var(--pf-c-dual-list-selector__status-text--Color);
}

.pf-c-dual-list-selector__menu {
  grid-area: var(--pf-c-dual-list-selector__menu--GridArea);
  min-height: var(--pf-c-dual-list-selector__menu--MinHeight);
  max-height: var(--pf-c-dual-list-selector__menu--MaxHeight);
  overflow: auto;
  border: var(--pf-c-dual-list-selector__menu--BorderWidth) solid var(--pf-c-dual-list-selector__menu--BorderColor);
}

.pf-c-dual-list-selector__list {
  --pf-c-dual-list-selector__item-toggle-icon--Rotate: 0;

  & & {
    --pf-c-dual-list-selector__item-toggle--MarginTop: 0;
    --pf-c-dual-list-selector__item-toggle--MarginBottom: 0;

    .pf-c-dual-list-selector__item-toggle {
      position: absolute;
      top: 0;
      left: var(--pf-c-dual-list-selector__list__list__item-toggle--Left);
      transform: translateX(var(--pf-c-dual-list-selector__list__list__item-toggle--TranslateX));
    }
  }

  &.pf-m-drag-over {
    overflow-anchor: none;
  }

  display: flex;
  flex-direction: column;
}

.pf-c-dual-list-selector__list-item {
  &.pf-m-expandable {
    --pf-c-dual-list-selector__item--PaddingLeft: var(--pf-c-dual-list-selector__item--m-expandable--PaddingLeft);
  }

  &.pf-m-expanded {
    --pf-c-dual-list-selector__item-toggle-icon--Rotate: var(--pf-c-dual-list-selector__list-item--m-expanded__item-toggle-icon--Rotate);
  }

  &.pf-m-disabled {
    --pf-c-dual-list-selector__item-text--Color: var(--pf-c-dual-list-selector__list-item--m-disabled__item-text--Color);
    --pf-c-dual-list-selector__item-toggle-icon--Color: var(--pf-c-dual-list-selector__list-item--m-disabled__item-toggle-icon--Color);

    pointer-events: none;
  }
}

.pf-c-dual-list-selector__list-item-row {
  display: flex;
  font-size: var(--pf-c-dual-list-selector__list-item-row--FontSize);
  background-color: var(--pf-c-dual-list-selector__list-item-row--BackgroundColor);

  &:hover {
    --pf-c-dual-list-selector__list-item-row--BackgroundColor: var(--pf-c-dual-list-selector__list-item-row--hover--BackgroundColor);
  }

  &:focus-within {
    --pf-c-dual-list-selector__list-item-row--BackgroundColor: var(--pf-c-dual-list-selector__list-item-row--focus-within--BackgroundColor);
  }

  &.pf-m-selected {
    --pf-c-dual-list-selector__list-item-row--BackgroundColor: var(--pf-c-dual-list-selector__list-item-row--m-selected--BackgroundColor);

    .pf-c-dual-list-selector__item-text {
      --pf-c-dual-list-selector__item-text--Color: var(--pf-c-dual-list-selector__list-item-row--m-selected__text--Color);

      font-weight: var(--pf-c-dual-list-selector__list-item-row--m-selected__text--FontWeight);
    }
  }

  &.pf-m-check {
    --pf-c-dual-list-selector__list-item-row--m-selected--BackgroundColor: transparent;
  }

  &.pf-m-ghost-row {
    --pf-c-dual-list-selector__list-item-row--BackgroundColor: var(--pf-c-dual-list-selector__list-item--m-ghost-row--BackgroundColor);

    opacity: var(--pf-c-dual-list-selector__list-item--m-ghost-row--Opacity);
  }
}

.pf-c-dual-list-selector__item,
.pf-c-dual-list-selector__main {
  display: flex;
}

.pf-c-dual-list-selector__item,
.pf-c-dual-list-selector__item-main {
  flex-basis: 100%;
}

.pf-c-dual-list-selector__draggable {
  display: flex;

  + .pf-c-dual-list-selector__item {
    --pf-c-dual-list-selector__item--PaddingLeft: var(--pf-c-dual-list-selector__draggable--item--PaddingLeft);
  }

  .pf-c-button {
    --pf-c-button--FontSize: inherit;

    cursor: grab;

    &:active {
      cursor: grabbing;
    }
  }
}

.pf-c-dual-list-selector__item {
  position: relative;
  width: 100%;
  padding: var(--pf-c-dual-list-selector__item--PaddingTop) var(--pf-c-dual-list-selector__item--PaddingRight) var(--pf-c-dual-list-selector__item--PaddingBottom) var(--pf-c-dual-list-selector__item--PaddingLeft);
  text-align: left;
  cursor: pointer;
  border: 0;
}

.pf-c-dual-list-selector__item-count {
  margin-left: var(--pf-c-dual-list-selector__item-count--Marginleft);

  .pf-c-badge.pf-m-read {
    --pf-c-badge--m-read--BackgroundColor: var(--pf-c-dual-list-selector__item--c-badge--m-read--BackgroundColor);
  }
}

.pf-c-dual-list-selector__item-text {
  @include pf-text-overflow;

  flex-grow: 1;
  color: var(--pf-c-dual-list-selector__item-text--Color);
}
/* ... */

